jwt security added